[workspace]
resolver = "1"
members = [
    "extend/lua",
    "extend/luakit",
    "extend/lualog",
    "extend/ljson",
    "extend/ltoml",
    "extend/lyaml",
    "extend/lstdfs",
    "extend/ltimer",
    "core/quanta",
]

[profile.release]
# strip = true
# codegen-units = 1
# lto = true
# panic = "abort"