[workspace]
resolver = "1"
members = [
    "extend/lua",
    "extend/luakit",
    "extend/lualog",
    "extend/lssl",
    "extend/lcsv",
    "extend/luapb",
    "extend/ljson",
    "extend/ltoml",
    "extend/lyaml",
    "extend/lcodec",
    "extend/lstdfs",
    "extend/ltimer",
    "extend/luaxml",
    "extend/lworker",
    "extend/luaxlsx",
    "core/quanta",
]

[profile.release]
# strip = true
# codegen-units = 1
# lto = true
# panic = "abort"