[package]
name = "luabus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type =["cdylib"]

[dependencies]
libc = "0.2.170"
ping-rs = "0.1.2"
lua = { path = "../../extend/lua"}
luakit = { path = "../../extend/luakit"}
mio = { version = "1.0.3", features = ["os-poll", "net"] }
