[package]
name = "lssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type =["cdylib"]

[dependencies]
rand = "0.9.0"
md-5 = "0.10.6"
ring = "0.17.8"
libc = "0.2.169"
base64ct = "1.6.0"
lua = { path = "../lua"}
luakit = { path = "../luakit"}
