[package]
name = "lssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type =["cdylib"]

[dependencies]
pem = "3.0.4"
crc = "3.2.1" #
lz4 = "1.28.1"
zstd = "0.13.2"
rand = "0.8.5"
md-5 = "0.10.6"
ring = "0.17.8"
xxtea = "0.2.0"
libc = "0.2.169"
base64  = "0.22.1"
rsa = { version = "0.9.7", features = ["sha2"] } # 请根据实际情况调整版本号
lua = { path = "../lua"}
luakit = { path = "../luakit"}
