[package]
name = "lualog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.169"
dyn-fmt = "0.4.3"  
chrono = "0.4.39"
memmap2 = "0.9.5"
once_cell = "1.20.3"
lua = { path = "../lua"}
luakit = { path = "../luakit"}
